--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,14 @@
     "vector": "cpp",
     "cstdlib": "cpp",
     "cmath": "cpp",
-    "valarray": "cpp"
+    "valarray": "cpp",
+    "array": "cpp",
+    "forward_list": "cpp",
+    "list": "cpp",
+    "unordered_map": "cpp",
+    "unordered_set": "cpp",
+    "initializer_list": "cpp",
+    "regex": "cpp"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
